Added Logo for Links

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- This is your little browser tab icon (favicon) -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- This is your page title -->
     <title>FinanceLearn - Interactive Lectures</title>
+
+    <!-- Open Graph / Facebook Meta Tags -- START HERE -->
+    <meta property="og:title" content="FinanceLearn - Interactive Lectures" />
+    <meta property="og:description" content="A modern, hands-on approach to learning the fundamentals of finance through interactive lessons." />
+    <meta property="og:image" content="https://financial-management-webapp.vercel.app/financelearnlogo.png" /> 
+    <meta property="og:url" content="https://financial-management-webapp.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <!-- END HERE -->
+
   </head>
   <body>
     <div id="root"></div>
